--- a/page2.html
+++ b/page2.html
@@ -86,7 +86,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/y">html site templates</a></section><section class="mbr-section form1 cid-rqMmyLldeY" id="form1-j">
+<section class="engine"><a href="https://mobirise.info/j">website templates</a></section><section class="mbr-section form1 cid-rqMmyLldeY" id="form1-j">
 
     
 
@@ -103,7 +103,7 @@
         <div class="row justify-content-center">
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                 <!---Formbuilder Form--->
-                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="h56C+vFC68x+pZvXNwBAC/4nAWbFsRuCNsBAN0Cm6X5zam/zVHjJ6/sYD1mtoNyjkchTYGbRxj/Qc6AKg0bYDsjPjBq+BiLC29g8mUPt/FLMnQv5PIWX9B2T1JmffsuD">
+                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="WdY25l9zb9YOyMKrb4UNX5sTtmO5JXVhnBm97/1S1apjkThxWxw8yWIgIJ/EHSbKC6hfoCydaiq+k9kC7NhrjW2yCEZcGn6feXVzqhfHYPiQoXskg1LIfChVRmsDoA0g">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
